@@ -1,5 +1,6 @@
 package de.tum.in.www1.artemis.exercise.modeling;
 
+import static de.tum.in.www1.artemis.util.TestResourceUtils.HalfSecond;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
 import static org.assertj.core.api.Assertions.within;
@@ -168,7 +169,7 @@ class ModelingSubmissionIntegrationTest extends AbstractSpringIntegrationLocalCI
         unsubmittedSubmission = generateUnsubmittedSubmission();
 
         Course course2 = textExerciseUtilService.addCourseWithOneReleasedTextExercise();
-        textExercise = (TextExercise) new ArrayList<>(course2.getExercises()).get(0);
+        textExercise = (TextExercise) new ArrayList<>(course2.getExercises()).getFirst();
 
         // Add users that are not in the course
         userUtilService.createAndSaveUser(TEST_PREFIX + "student4");
@@ -584,7 +585,7 @@ class ModelingSubmissionIntegrationTest extends AbstractSpringIntegrationLocalCI
                 ModelingSubmission.class);
 
         assertThat(storedSubmission).as("submission was found").isEqualToIgnoringGivenFields(submission, "results", "submissionDate");
-        assertThat(storedSubmission.getSubmissionDate()).as("submission date is correct").isEqualToIgnoringNanos(submission.getSubmissionDate());
+        assertThat(storedSubmission.getSubmissionDate()).as("submission date is correct").isCloseTo(submission.getSubmissionDate(), HalfSecond());
         assertThat(storedSubmission.getLatestResult()).as("result is not set").isNull();
         checkDetailsHidden(storedSubmission, false);
     }
@@ -770,7 +771,7 @@ class ModelingSubmissionIntegrationTest extends AbstractSpringIntegrationLocalCI
         exam.setPublishResultsDate(ZonedDateTime.now().plusHours(3));
 
         // creating exercise
-        ExerciseGroup exerciseGroup = exam.getExerciseGroups().get(0);
+        ExerciseGroup exerciseGroup = exam.getExerciseGroups().getFirst();
 
         ModelingExercise modelingExercise = ModelingExerciseFactory.generateModelingExerciseForExam(DiagramType.ActivityDiagram, exerciseGroup);
         exerciseGroup.addExercise(modelingExercise);
@@ -794,7 +795,7 @@ class ModelingSubmissionIntegrationTest extends AbstractSpringIntegrationLocalCI
         exam.setEndDate(ZonedDateTime.now().minusHours(1));
         exam.setVisibleDate(ZonedDateTime.now().minusHours(3));
 
-        ExerciseGroup exerciseGroup = exam.getExerciseGroups().get(0);
+        ExerciseGroup exerciseGroup = exam.getExerciseGroups().getFirst();
         ModelingExercise modelingExercise = ModelingExerciseFactory.generateModelingExerciseForExam(DiagramType.ActivityDiagram, exerciseGroup);
         exerciseGroup.addExercise(modelingExercise);
         exerciseGroupRepository.save(exerciseGroup);
